# orrery

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  Makefile  README.md  docker-compose.yml
.github/: CODEOWNERS
crates/orrery/: Cargo.toml  README.md
crates/orrery-client/: Cargo.toml  README.md
crates/orrery-client/src/: lib.rs
crates/orrery-client/tests/: definitions_test.rs  events_test.rs  instances_test.rs  metrics_test.rs  tasks_test.rs
crates/orrery-server/: Cargo.toml
crates/orrery-server/.sqlx/: query-037b3016ce38a8820521d36fea97b480e412809b0e2689572988759fd0726c95.json  query-0769e4c4e0170af6f9d5fe14c5abe3422717313cc95a3c1355d8cc184ddf4f63.json  query-0c142064d69bf212cc60b79db9de77a4ce3384f3f61b86376534568ca080c4b1.json  query-1d755d6a3b8595ad633a96b110464537f1b4d0c6f94047bc4c0408fdb4b20aa2.json  query-21276eec4e04fc793768f63cb8cfd8facd6e799478515d6f5424acc62d36851f.json  query-2250d6c5e1bcc077427c6b938ebf931f8c180e43e48b36ce7f9a5b83d5824b0d.json  query-22b2eb98a0ffc8218b36b0410a7da71e78ece2fe40866f2809e18577637f69ff.json  query-24549d5ae25484d041d767a684e16e009e41847089dd1add0a4b89f20889292c.json  query-257766a82f2419816fe54e66b14b6e762e13c69f7c3e91e78f415b4aca2d7bd1.json  query-2e8931d95128cd34e697c26111f0b686cd97b0297c7e41f9b54be5dcb0bad45c.json  query-320fef9434e015b2de362daf4accf542f0d6eef4a02d7ca8817dbf40488285db.json  query-333e3cbd5bac8a5876fe68af9781cdd6cf457f31810b41266270a1a0a8216b16.json  query-355ade0d794964ba4f93557f8ee753a66cfaf7a2c440a7b37710543a06215542.json  query-3c8e73f38aa2a8972561f92d77ded336a7e30c8af192299c82f4f365d53e4212.json  query-43a1526e83bd7f558f4206d7d409b226c19e95f638c93c929d6119812350a561.json  query-4557af7d0ab1dc70eebed298c84981f5287d438961ca87adf39233cfeddcaae7.json  query-478ccf281591c300621cf5544041c25dc2f669a9808551edc32fb82ba8171eef.json  query-4a79a235fe1626d74da9d29c0755b82f7b6269e8766ebcef7e55a0d9c6f9cbd2.json  query-4a8ad636f97bfdeef75bd20b1d893d2cc0ba161f3fdcfecdbfbb197caffdf463.json  query-4c87265ac6a34b7422f0430a3d622cfaef9bcd57aacb69032edff109aefa657f.json  query-50c34429a84a0f77cfd51385186222522b557190aa1a7fb1baf5d250a6b0890f.json  query-5cd87fc8fb20a6326722dfa3a67a0c3b8d7d2733393b8408983887b1677cec10.json  query-65b42c11857b68f8d512efde366f943ad73efbc34719d431ab5a896f7094edab.json  query-71c236ab21cdfbfa30a1b052aa534d6b4ea5f5b28f229fa49fae84d8e5d0d17b.json  query-71c34262a0cf1b550f9041118b365e3a28c3a1f35e140c6d2f51fc210489bab0.json  query-76b26ae1330d7c50a8520fc770024bbb0e56bede3d3fba2c8739f0274111f22d.json  query-8681febb512641aeab4f906a35603606f16aba57d28349a9ae3e3e3ba852644f.json  query-872563d6491e90cafb24d9f475fdd6cbcdde9ae9cbcb7b457a832801a5a8fda4.json  query-88d3c6b14af60a62cfb158e5c5033093df9a0a8c713158bbc88b7259eece6af3.json  query-8ebf09106ed9b5ca08597b9ba89c1494976cb1120b3d43d558dc7a2472307e81.json  query-90f07916562c5f61c08d2dac4902bbf4b9ae6b128a1baccbdf61cae5cd28cb17.json  query-9bba0a418b5f01a24a5c80af7c6f2cd15b480817968065022d57e9710acd9ee0.json  query-9ca845da3c09201b9ae10b2265009615680bff36d4ba73835fb212368898724c.json  query-9d4b526a27a40e505cfd21b81f1e5ecd7b62e3b6a77eac97a652b3ff66525b33.json  query-a4df3cca07cb91dd6227fa8f761f4156691f19098cd7d2d45df699be60344b8a.json  query-a9825d8f29003d27afde97112433f0a69e0d95652d9bcfa8e24ffb5625c19d9d.json  query-aabc63a19eeac44ee1b974961c1c0b7edadb7f5b4a70ba02b55d3bdf8b09fa06.json  query-ae1acfb93f1fb4bd9ab93551566186527099a00b9282a0012047e44729240312.json  query-b8e2bde4c962a1fc7f6df20ff1989a25c6f3b827f2a4b27929b44ecb8e5b71b0.json  query-ba2917e6a78c8a5bf193ba7e1abd02216fb5cb13e32ef7e4e016d510ad56b725.json  (+19 more)
crates/orrery-server/migrations/: 001_initial.sql  002_execution_history.sql  003_tasks.sql  004_timers_and_retries.sql  005_message_signal_subscriptions.sql  006_instance_error_message.sql  007_external_tasks.sql  008_definition_versioning.sql  009_timer_duration.sql  010_timer_kind.sql  011_timer_start_defs.sql  012_message_events.sql  013_business_key.sql  014_event_gateway_group.sql  015_signal_events.sql  016_history_columns.sql  017_event_subprocess_subscriptions.sql
crates/orrery-server/src/: db.rs  errors.rs  lib.rs  main.rs  recovery.rs  scheduler.rs  timer_eval.rs
crates/orrery-server/tests/: api_test.rs  db_test.rs  event_based_gateway_test.rs  inclusive_gateway_test.rs  openapi_test.rs  parallel_gateway_test.rs
crates/orrery-types/: Cargo.toml  README.md
crates/orrery-types/src/: definitions.rs  events.rs  external_tasks.rs  history.rs  instances.rs  lib.rs  metrics.rs  tasks.rs  timers.rs
crates/orrery-ui/: Cargo.toml  Trunk.toml  index.html
crates/orrery-ui/src/: api.rs  app.rs  main.rs
crates/orrery-worker/: Cargo.toml  README.md
(+123 files in other folders)
