[workspace]
resolver = "2"
members = [
    "crates/orrery",
    "crates/orrery-diagram",
    "crates/orrery-server",
    "crates/orrery-client",
    "crates/orrery-types",
    "crates/orrery-ui",
    "crates/orrery-worker",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
orrery-types = { path = "crates/orrery-types", version = "0.1.0" }
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
strip = true
