[package]
name = "orrery-server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
orrery = { path = "../orrery" }
orrery-diagram = { path = "../orrery-diagram" }
orrery-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { version = "0.8", features = ["multipart"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
cron = "0.12"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
dotenvy = "0.15"
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
http-body-util = "0.1.3"

[dev-dependencies]
testcontainers-modules = { version = "0.11", features = ["postgres"] }
axum-test = "17"
