[package]
name = "orrery-ui"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
orrery-types = { workspace = true }
orrery-client = { path = "../orrery-client", default-features = false }
leptos = { version = "0.6.15", features = ["csr"] }
leptos_router = { version = "0.6.15", features = ["csr"] }
gloo-timers = { version = "0.3", features = ["futures"] }
gloo-net = { version = "0.6", features = ["http"] }
serde = { workspace = true }
serde_json = { workspace = true }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Clipboard", "DragEvent", "DataTransfer", "Element", "FileList", "File", "FileReader",
    "HtmlInputElement", "Event", "EventTarget", "MouseEvent", "Navigator", "Window"
] }
chrono = { version = "0.4", features = ["serde"] }
